# reminders-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  claude_desktop_config.json  pyproject.toml
.github/workflows/: ci.yml
src/reminders_mcp/: reminders.py  server.py
tests/: test_reminders.py  test_server.py
