[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reminders-mcp"
version = "0.1.0"
description = "MCP server for macOS Reminders app"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
reminders-mcp = "reminders_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reminders_mcp"]
